--- a/drought_metrics.yml
+++ b/drought_metrics.yml
@@ -1,24 +1,24 @@
-name: drought_metrics
+name: _CMEC_drought_metrics
 channels:
   - conda-forge
   - defaults
 dependencies:
   - affine=2.3.0
-  - basemap=1.2.1
-  - cartopy=0.17.0
-  - esmpy=8.0.0
-  - matplotlib=3.1.3
-  - netcdf4=1.5.1.2
-  - numpy=1.18.1
-  - pandas=1.0.3
-  - pip=20.1
-  - scipy=1.4.1
-  - shapely=1.6.4
-  - xarray=0.15.1
-  - xesmf=0.3.0
+  - basemap=1.2.2
+  - cartopy=0.18.0
+  - esmpy=8.1.1
+  - matplotlib=3.3.4
+  - netcdf4=1.5.7
+  - numpy=1.19.5
+  - pandas=1.1.5
+  - pip=21.1.3
+  - python=3.6
+  - scipy=1.5.3
+  - shapely=1.7.1
+  - xarray=0.18.2
+  - xesmf=0.5.3
   - pip:
     - climate-indices==1.0.9
-    - geopandas==0.7.0
-    - rasterio==1.1.3
-    - scikit-learn==0.23.1
-
+    - geopandas==0.9.0
+    - rasterio==1.2.6
+    - scikit-learn==0.24.2
